--- a/index.html
+++ b/index.html
@@ -10,9 +10,14 @@
 			sizes="32x32"
 			href="./images/favicon-32x32.png"
 		/>
-
+		<link rel="preconnect" href="https://fonts.googleapis.com" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Dancing+Script&family=Epilogue:wght@100;500;700&family=Fraunces:opsz,wght@9..144,700&family=Great+Vibes&family=Josefin+Sans:wght@300;400;600&family=Kumbh+Sans:wght@400;700&family=Libre+Franklin:wght@300;600;700&family=Montserrat:wght@500;700&family=Open+Sans:ital,wght@1,300&family=Outfit:wght@400;700&family=Overpass:wght@400;700&family=Playfair+Display&family=Quicksand:wght@300&family=Space+Grotesk:wght@300;500&display=swap"
+			rel="stylesheet"
+		/>
 		<title>Frontend Mentor | Interactive card details form</title>
-
+		<link rel="stylesheet" href="style.css" />
 		<!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
 		<style>
 			.attribution {
@@ -25,14 +30,71 @@
 		</style>
 	</head>
 	<body>
-		0000 0000 0000 0000 Jane Appleseed 00/00 000 Cardholder Name e.g. Jane
-		Appleseed Card Number e.g. 1234 5678 9123 0000 Exp. Date (MM/YY) MM YY
-		CVC e.g. 123 Confirm
-		<main class="container"></main>
+		<main class="container">
+			<div class="leftside"></div>
+			<div class="cards">
+				<div class="firstcard">
+					<img src="images/card-logo.svg" alt="card-logo" />
+					<h1 class="cardNumber">0000 0000 0000 0000</h1>
+					<div class="nameexp">
+						<p class="nameCard">Jane Appleseed</p>
+						<p class="expDate">00/00</p>
+					</div>
+				</div>
+				<div class="secpage">
+					<p class="cvc">000</p>
+				</div>
+			</div>
+			<div class="rightside">
+				<form action="get" class="forms">
+					<label for="cardholder">Cardholder name</label><br />
+					<input
+						type="text"
+						id="cardholder"
+						name="cardholder"
+						placeholder="e.g. Jane Appleseed"
+					/><br />
+					<label for="cardnum">Card number</label><br />
+					<input
+						type="text"
+						name="cardnum"
+						id="cardnum"
+						placeholder="e.g. 1234 5678 9123 0000"
+					/>
+					<p class="errorNum"></p>
+					<br />
+					<label for="month">Exp. Date (mm/yy)</label
+					><label for="cvc" class="labelcv">Cvc</label><br />
+					<input
+						type="text"
+						id="month"
+						name="month"
+						placeholder="MM"
+					/>
+					<label for="year"></label>
+					<input type="text" name="year" id="year" placeholder="YY" />
+					<input
+						type="text"
+						name="cvc"
+						id="cvc"
+						placeholder="e.g. 123"
+					/>
+					<div class="errors">
+						<p class="errorMY"></p>
+						<p class="errorCv"></p>
+					</div>
+					<br />
+					<button type="submit" class="confirmButton">Confirm</button>
+				</form>
+				<div class="thanksstate">
+					<img src="images/icon-complete.svg" alt="completeicon" />
+					<h1>Thank You!</h1>
+					<p>We've added your card details</p>
+					<button type="submit">Countinue</button>
+				</div>
+			</div>
+		</main>
 		<!-- Completed state start -->
-
-		Thank you! We've added your card details Continue
-
 		<div class="attribution">
 			Challenge by
 			<a
@@ -41,5 +103,6 @@
 				>Frontend Mentor</a
 			>. Coded by <a href="#">Your Name Here</a>.
 		</div>
+		<script src="script.js"></script>
 	</body>
 </html>
