--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
 					<p class="errorNum"></p>
 					<br />
 					<label for="month">Exp. Date (mm/yy)</label
-					><label for="cvc" class="labelcv">Cvc</label><br />
+					><label for="cvcinput" class="labelcv">Cvc</label><br />
 					<input
 						type="text"
 						id="month"
@@ -76,7 +76,7 @@
 					<input
 						type="text"
 						name="cvc"
-						id="cvc"
+						id="cvcinput"
 						placeholder="e.g. 123"
 					/>
 					<div class="errors">
@@ -90,7 +90,7 @@
 					<img src="images/icon-complete.svg" alt="completeicon" />
 					<h1>Thank You!</h1>
 					<p>We've added your card details</p>
-					<button type="submit">Countinue</button>
+					<button type="submit" class="continuebtn">Countinue</button>
 				</div>
 			</div>
 		</main>
