--- a/index.html
+++ b/index.html
@@ -48,13 +48,14 @@
 				</div>
 			</div>
 			<div class="rightside">
-				<form action="get" class="forms">
+				<form action="#" class="forms">
 					<label for="cardholder">Cardholder name</label><br />
 					<input
 						type="text"
 						id="cardholder"
 						name="cardholder"
 						placeholder="e.g. Jane Appleseed"
+						maxlength="25"
 					/><br />
 					<label for="cardnum">Card number</label><br />
 					<input
@@ -107,14 +108,16 @@
 			</div>
 		</main>
 		<!-- Completed state start -->
-		<div class="attribution">
-			Challenge by
-			<a
-				href="https://www.frontendmentor.io?ref=challenge"
-				target="_blank"
-				>Frontend Mentor</a
-			>. Coded by <a href="#">Your Name Here</a>.
-		</div>
+		<footer>
+			<div class="attribution">
+				Challenge by
+				<a
+					href="https://www.frontendmentor.io?ref=challenge"
+					target="_blank"
+					>Frontend Mentor</a
+				>. Coded by <a href="#">Your Name Here</a>.
+			</div>
+		</footer>
 		<script src="script.js"></script>
 	</body>
 </html>
