--- a/index.html
+++ b/index.html
@@ -56,7 +56,9 @@
 						name="cardholder"
 						placeholder="e.g. Jane Appleseed"
 						maxlength="25"
-					/><br />
+					/>
+					<p class="blankcardholder"></p>
+					<br />
 					<label for="cardnum">Card number</label><br />
 					<input
 						type="text"
