--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
 						type="text"
 						id="cardholder"
 						name="cardholder"
+						pattern="[A-Za-z]"
 						placeholder="e.g. Jane Appleseed"
 						maxlength="25"
 					/>
