--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 						name="month"
 						placeholder="MM"
 						maxlength="2"
-						max="12"
+						maxlength="12"
 					/>
 					<label for="year"></label>
 					<input
